[project]
name = "comfyui-image-browsing"
description = "Image Browsing: browsing, download and delete."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/hayden-fr/ComfyUI-Image-Browsing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayden"
DisplayName = "ComfyUI-Image-Browsing"
Icon = ""
