[project]
name = "comfyui-image-browsing"
description = "Image Browsing: browsing, download and delete."
version = "2.2.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/hayden-fr/ComfyUI-Image-Browsing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hayden"
DisplayName = "ComfyUI-Image-Browsing"
Icon = ""
